Fix white space in project directory

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -241,8 +241,7 @@ body {
 
 .project-directory {
   margin-top: 30px;
-  /*padding-left: 27.5%;*/
-  width: 90%;
+  
 }
 
 .saved-project {
